--- a/shippable.yml
+++ b/shippable.yml
@@ -19,6 +19,9 @@ jobs:
     steps:
       - TASK:
           name: should-message-irc
+          runtime:
+            imageName: drydock/u16all
+            imageTag: latest
           script:
             - echo "hello"
 
