--- a/shippable.yml
+++ b/shippable.yml
@@ -1,46 +1,21 @@
 jobs:
-  - name: irc-shipctl-testing
+  - name: airbrake-shipctl-testing
     type: runSh
     steps:
-      - IN: freenode-notifier
+      - IN: airbrake-notifier
       - TASK:
-          name: should-message-irc
-          script:
-            - echo "hello"
-            - shipctl notify irc-notifier --text="hello from runsh job"
-            - echo "bye"
-            
-  - name: irc-notify-testing
-    type: runSh
-    on_success:
-      NOTIFY:
-        - name: freenode-notifier
-#         - name: rizon-notifier
-#         - name: ircnet-notifier
-    steps:
-      - TASK:
-          name: should-message-irc
+          name: should-message-airbrake
           script:
             - echo "hello"
 
 resources:
-  - name: freenode-notifier
+  - name: airbrake-userlevel-notifier
     type: notification
-    versionTemplate:
-      method: irc
-      recipients:
-        - "chat.freenode.net#shiptest"
+    integration: sample_airbrake_sub_int
 
-  - name: rizon-notifier
+  - name: airbrake-projectlevel-noifier
     type: notification
+    integration: sample_airbrake_sub_int
     versionTemplate:
-      method: irc
       recipients:
-        - "irc.rizon.net#shiptest"
-
-  - name: ircnet-notifier
-    type: notification
-    versionTemplate:
-      method: irc
-      recipients:
-        - "open.ircnet.net#shiptest"
+        - 215168    # only the first project ID will be considered by shipctl notify
