--- a/shippable.yml
+++ b/shippable.yml
@@ -26,6 +26,20 @@ jobs:
             - cd node
             - sudo shipctl/x86_64/Ubuntu_16.04/install.sh
             - shipctl notify airbrake-projectlevel-noifier --type="deploy"  --environment="production" --username="pro" --repository="https://github.com/vishnu-shippable/local-test-cd" --revision="proj.prod.$BUILD_NUMBER" --version="v4" --email="vishnu@shippable.com"
+            
+  - name: airbrake-missing-args-testing
+    type: runSh
+    steps:
+      - IN: airbrake-userlevel-notifier
+      - TASK:
+          name: should-error
+          script:
+            - echo "hello"
+            - printenv
+            - git clone https://github.com/scriptnull/node.git
+            - cd node
+            - sudo shipctl/x86_64/Ubuntu_16.04/install.sh
+            - shipctl notify airbrake-userlevel-notifier --type="deploy" # missing project-id and other args
 
 resources:
   - name: airbrake-userlevel-notifier
