--- a/shippable.yml
+++ b/shippable.yml
@@ -19,8 +19,9 @@ jobs:
       - TASK:
           name: should-message-slack
           runtime:
-            imageName: drydock/u16nodall
-            imageTag: v6.9.4
+            options:
+              imageName: drydock/u16nodall
+              imageTag: v6.9.4
           script:
             - echo "hello"
 
